Digital/objects/Placement_Library__c.object
<CustomObject>
    <label>Placement Library</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Library</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>API_Product_Preview_IDs__c</fullName>
        <inlineHelpText>Add previewID,publishedID,stackIds and product count in the following format.previewID:&lt;enter preview ID from HIPPO here&gt;,publishedID:&lt;enter published ID from HIPPO here&gt;,stackIds:&lt;Enter all stack ids here&gt;,cards:&lt;Enter card count here&gt;,products:&lt;enter pr</inlineHelpText>
        <label>API Product Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Placement_Library</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Copy__c</fullName>
        <inlineHelpText>Enter copy for App specific placements. This would usually be populated only on OSL type placements.</inlineHelpText>
        <label>App Copy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <inlineHelpText>Select the brand from the drop down: E.g. VS, PINK, Beauty, Marketplace</inlineHelpText>
        <label>Brand</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DGTL_Brands</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_Page_Url__c</fullName>
        <inlineHelpText>Add collection page URLs for collection Header and collection cue placements.  Enter URL without live site details. For e.g. enter “/vs/newarrivals/shop-collection” without “https://victoriassecret.com/”</inlineHelpText>
        <label>Collection Page Url</label>
        <length>20768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <inlineHelpText>Select the type of the content from the drop down. E.g. Image, Dynamic, Video</inlineHelpText>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                    <default>true</default>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>API Product feed</fullName>
                </value>
                <value>
                    <fullName>ImageText</fullName>
                    <isActive>false</isActive>
                    <label>ImageText</label>
                </value>
                <value>
                    <fullName>Offer Spotlight</fullName>
                    <isActive>false</isActive>
                    <label>Offer Spotlight</label>
                </value>
                <value>
                    <fullName>Popup</fullName>
                    <isActive>false</isActive>
                    <label>Popup</label>
                </value>
                <value>
                    <fullName>Site Majority Offer</fullName>
                    <isActive>false</isActive>
                    <label>Site Majority Offer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_Image__c</fullName>
        <label>Copy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Creative_delivery_path__c</fullName>
        <label>Creative delivery path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Editorial_Name__c</fullName>
        <description>Indicates the Editorial name when page type is Editorial</description>
        <label>Editorial Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Minute__c</fullName>
        <label>End Minute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time_No__c</fullName>
        <formula>IF(CONTAINS( TEXT(End_Time__c) , &#39;AM&#39;), 
IF(LEN(TEXT(End_Time__c))=5, 
IF(CONTAINS( TEXT(End_Time__c) , &#39;12&#39;),0,VALUE(LEFT(TEXT(End_Time__c),2))), 
VALUE(LEFT(TEXT(End_Time__c),1)) 
), 
IF(LEN(TEXT(End_Time__c))=5, 
VALUE(LEFT(TEXT(End_Time__c),2))+12, 
VALUE(LEFT(TEXT(End_Time__c),1))+12 
) 
) * 60 + VALUE(Text(End_Minute__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Hour</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 AM</fullName>
                </value>
                <value>
                    <fullName>1 AM</fullName>
                </value>
                <value>
                    <fullName>2 AM</fullName>
                </value>
                <value>
                    <fullName>3 AM</fullName>
                </value>
                <value>
                    <fullName>4 AM</fullName>
                </value>
                <value>
                    <fullName>5 AM</fullName>
                    <default>true</default>
                    <label>5 AM</label>
                </value>
                <value>
                    <fullName>6 AM</fullName>
                </value>
                <value>
                    <fullName>7 AM</fullName>
                </value>
                <value>
                    <fullName>8 AM</fullName>
                </value>
                <value>
                    <fullName>9 AM</fullName>
                </value>
                <value>
                    <fullName>10 AM</fullName>
                </value>
                <value>
                    <fullName>11 AM</fullName>
                </value>
                <value>
                    <fullName>12 PM</fullName>
                </value>
                <value>
                    <fullName>1 PM</fullName>
                </value>
                <value>
                    <fullName>2 PM</fullName>
                </value>
                <value>
                    <fullName>3 PM</fullName>
                </value>
                <value>
                    <fullName>4 PM</fullName>
                </value>
                <value>
                    <fullName>5 PM</fullName>
                </value>
                <value>
                    <fullName>6 PM</fullName>
                </value>
                <value>
                    <fullName>7 PM</fullName>
                </value>
                <value>
                    <fullName>8 PM</fullName>
                </value>
                <value>
                    <fullName>9 PM</fullName>
                </value>
                <value>
                    <fullName>10 PM</fullName>
                </value>
                <value>
                    <fullName>11 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the placement is evergreen for the page</inlineHelpText>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grouped__c</fullName>
        <inlineHelpText>Select group start/group end to show placements in grid view</inlineHelpText>
        <label>Grouped</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Start</fullName>
                </value>
                <value>
                    <fullName>Group End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <inlineHelpText>Upload one or more screen cap(s) of a product image to be featured on site</inlineHelpText>
        <label>CAD/Shot/Screen Cap</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select one or more approved KODs if the placement is an offer type. Use search icon in the dropdown to filter further.</inlineHelpText>
        <label>KOD</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>KOD__c.Offer_Status__c</field>
                <operation>equals</operation>
                <value>APPROVED</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>KOD__c</referenceTo>
        <relationshipLabel>Placement Library</relationshipLabel>
        <relationshipName>Placement_Library</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Message__c</fullName>
        <inlineHelpText>Enter concise main message for the placement. Used as placement identifier everywhere.</inlineHelpText>
        <label>Main Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Additional product notes or instructions can be added here</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <inlineHelpText>Select if the placement is offer/non offer from the drop down. If placement is an offer type then select KODs in the next field</inlineHelpText>
        <label>Offer/Non-offer</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Non Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Types__c</fullName>
        <inlineHelpText>Select appropriate Home, Landing, Editorials or LTO page type from the drop down, based on what is being built</inlineHelpText>
        <label>Page Types</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brands__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>DGTL_Page_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placement_type__c</fullName>
        <inlineHelpText>Select the type of placement from the drop down. E.g. Banner, Cue, feature, Site Majority Offer etc.</inlineHelpText>
        <label>Placement type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Cue</fullName>
                </value>
                <value>
                    <fullName>Site Majority Offer</fullName>
                </value>
                <value>
                    <fullName>Floating Cue/Collection Cue</fullName>
                </value>
                <value>
                    <fullName>Collection Header</fullName>
                </value>
                <value>
                    <fullName>Stack Header</fullName>
                </value>
                <value>
                    <fullName>Product Page Header</fullName>
                </value>
                <value>
                    <fullName>Offer Copy</fullName>
                </value>
                <value>
                    <fullName>OLCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <inlineHelpText>Enter position number for the placements to show in a sequence in layout. Leave empty for non-floating cue placements.</inlineHelpText>
        <label>Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_list__c</fullName>
        <inlineHelpText>Enter document name for associating product list for Auto Takedown</inlineHelpText>
        <label>Product list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected__c</fullName>
        <label>Projected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Row_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the placement should display in its own row on the mosaic view</inlineHelpText>
        <label>Row Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shot_Number__c</fullName>
        <inlineHelpText>Enter product shot number from DAM, if available. Typically used for creative direction. Use commas to separate for multiple shot numbers.</inlineHelpText>
        <label>Shot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Placements__c</fullName>
        <inlineHelpText>Select &quot;Offer&quot; from Offer/Non-offer drop down to see the Site Placements</inlineHelpText>
        <label>Site Placements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Offer_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Page Header</fullName>
                </value>
                <value>
                    <fullName>Floating Cue</fullName>
                </value>
                <value>
                    <fullName>Offer Spotlight</fullName>
                </value>
                <value>
                    <fullName>Product Page Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Minute__c</fullName>
        <label>Start Minute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time_No__c</fullName>
        <formula>IF(CONTAINS( TEXT(Start_Time__c) , &#39;AM&#39;),
					IF(LEN(TEXT(Start_Time__c))=5,
					IF(CONTAINS( TEXT(Start_Time__c) , &#39;12&#39;),0,VALUE(LEFT(TEXT(Start_Time__c),2))),
					VALUE(LEFT(TEXT(Start_Time__c),1))
					),
					IF(LEN(TEXT(Start_Time__c))=5,
					VALUE(LEFT(TEXT(Start_Time__c),2))+12,
					VALUE(LEFT(TEXT(Start_Time__c),1))+12
					)
		  ) * 60 + VALUE(Text(Start_Minute__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Hour</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 AM</fullName>
                </value>
                <value>
                    <fullName>1 AM</fullName>
                </value>
                <value>
                    <fullName>2 AM</fullName>
                </value>
                <value>
                    <fullName>3 AM</fullName>
                </value>
                <value>
                    <fullName>4 AM</fullName>
                </value>
                <value>
                    <fullName>5 AM</fullName>
                    <default>true</default>
                    <label>5 AM</label>
                </value>
                <value>
                    <fullName>6 AM</fullName>
                </value>
                <value>
                    <fullName>7 AM</fullName>
                </value>
                <value>
                    <fullName>8 AM</fullName>
                </value>
                <value>
                    <fullName>9 AM</fullName>
                </value>
                <value>
                    <fullName>10 AM</fullName>
                </value>
                <value>
                    <fullName>11 AM</fullName>
                </value>
                <value>
                    <fullName>12 PM</fullName>
                </value>
                <value>
                    <fullName>1 PM</fullName>
                </value>
                <value>
                    <fullName>2 PM</fullName>
                </value>
                <value>
                    <fullName>3 PM</fullName>
                </value>
                <value>
                    <fullName>4 PM</fullName>
                </value>
                <value>
                    <fullName>5 PM</fullName>
                </value>
                <value>
                    <fullName>6 PM</fullName>
                </value>
                <value>
                    <fullName>7 PM</fullName>
                </value>
                <value>
                    <fullName>8 PM</fullName>
                </value>
                <value>
                    <fullName>9 PM</fullName>
                </value>
                <value>
                    <fullName>10 PM</fullName>
                </value>
                <value>
                    <fullName>11 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Style_Info__c</fullName>
        <inlineHelpText>Enter information about the product and it&#39;s description including styles numbers</inlineHelpText>
        <label>Style Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Placement Type old</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BANNER</fullName>
                </value>
                <value>
                    <fullName>CUE</fullName>
                </value>
                <value>
                    <fullName>FEATURE</fullName>
                </value>
                <value>
                    <fullName>OFFER BANNER</fullName>
                </value>
                <value>
                    <fullName>BANNER 1</fullName>
                    <isActive>false</isActive>
                    <label>BANNER 1</label>
                </value>
                <value>
                    <fullName>BANNER 2</fullName>
                    <isActive>false</isActive>
                    <label>BANNER 2</label>
                </value>
                <value>
                    <fullName>BANNER 3</fullName>
                    <isActive>false</isActive>
                    <label>BANNER 3</label>
                </value>
                <value>
                    <fullName>CUE 1</fullName>
                    <isActive>false</isActive>
                    <label>CUE 1</label>
                </value>
                <value>
                    <fullName>CUE 2</fullName>
                    <isActive>false</isActive>
                    <label>CUE 2</label>
                </value>
                <value>
                    <fullName>CUE 3</fullName>
                    <isActive>false</isActive>
                    <label>CUE 3</label>
                </value>
                <value>
                    <fullName>CUE 4</fullName>
                    <isActive>false</isActive>
                    <label>CUE 4</label>
                </value>
                <value>
                    <fullName>CUE 5</fullName>
                    <isActive>false</isActive>
                    <label>CUE 5</label>
                </value>
                <value>
                    <fullName>SUB CUE</fullName>
                    <isActive>false</isActive>
                    <label>SUB CUE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Approver_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Offer_Type__c ,&quot;Offer&quot;),ISBLANK( Approver__c ))</errorConditionFormula>
        <errorDisplayField>Approver__c</errorDisplayField>
        <errorMessage>Approver is Mandatory..!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Editorial_Name_Mandatory</fullName>
        <active>true</active>
        <description>Editorial name is mandatory when page type is Editorial</description>
        <errorConditionFormula>AND(
ISPICKVAL( Page_Types__c , &quot;Editorials&quot;),
ISBLANK(Editorial_Name__c)
)</errorConditionFormula>
        <errorDisplayField>Editorial_Name__c</errorDisplayField>
        <errorMessage>Editorial Name is Mandatory for Editorials, Please enter Editorial Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_date_should_be_less_than_Start_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR( End_Date__c &lt;  Start_Date__c , if(End_Date__c ==   Start_Date__c , if( End_Time_No__c  &lt;   Start_Time_No__c , true,false) ,false))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Start Date cannot be after End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Placement_Type_Mandatory</fullName>
        <active>true</active>
        <description>Placement_type__c is Mandatory when page type is Editorials</description>
        <errorConditionFormula>AND(
ISPICKVAL(Page_Types__c , &quot;Editorials&quot;),
ISPICKVAL(Placement_type__c,&quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Placement_type__c</errorDisplayField>
        <errorMessage>This field is required for Editorials, Please complete the field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shot_Number_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Shot_Number__c )</errorConditionFormula>
        <errorDisplayField>Shot_Number__c</errorDisplayField>
        <errorMessage>Shot Number Required..!!</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brands__c</columns>
        <columns>Page_Types__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Brands__c</columns>
        <columns>Site_Placements__c</columns>
        <columns>Offer_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Angel_Card</fullName>
        <columns>NAME</columns>
        <columns>Main_Message__c</columns>
        <columns>Brands__c</columns>
        <columns>Offer_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Placement_type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Angel Card LP</value>
        </filters>
        <label>Angel Card</label>
    </listViews>
    <listViews>
        <fullName>Home_Page</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Link__c</columns>
        <columns>Shot_Number__c</columns>
        <columns>Main_Message__c</columns>
        <columns>Projected__c</columns>
        <columns>Style_Info__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brands__c</field>
            <operation>equals</operation>
            <value>VS</value>
        </filters>
        <filters>
            <field>Page_Types__c</field>
            <operation>equals</operation>
            <value>Home Page</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>10/17/2019</value>
        </filters>
        <label>Home Page</label>
    </listViews>
    <listViews>
        <fullName>Marketplace_Placements</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brands__c</field>
            <operation>equals</operation>
            <value>Marketplace</value>
        </filters>
        <label>Marketplace Placements</label>
    </listViews>
    <listViews>
        <fullName>Placement_Library_Approval_Placement_Library</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brands__c</field>
            <operation>equals</operation>
            <value>VS</value>
        </filters>
        <filters>
            <field>Page_Types__c</field>
            <operation>equals</operation>
            <value>Editorials</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2019</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>10/15/2019</value>
        </filters>
        <label>Placement Library Approval</label>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
</CustomObject>